# NeuronNetwork-CPP

./: .gitignore  Doxyfile  LICENSE  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  neuron.cpp  neuron.h  sigmoid_neuron_test.cpp  sigmoid_neuron_test.h  test.cpp
src/: data.cpp  data.h  main.cpp  network.cpp  network.h
src/neuron/: base.cpp  base.h  neuron.cpp  neuron.h  sigmoid.cpp  sigmoid.h  sigmoid_neuron.h
test/: data_test.cpp  data_test.h  network_test.cpp  network_test.h  test.cpp
test/neuron/: base_test.cpp  base_test.h  sigmoid_neuron_test.cpp  sigmoid_neuron_test.h  sigmoid_test.cpp  sigmoid_test.h
